# irl-benchmark

./: .gitignore  CMakeLists.txt  README.md  config.cmake  postprocess.py  sample_example.py
src/: CMakeLists.txt
src/irl/: .clang-format  CMakeLists.txt  irl_intersection.cpp  irl_intersection.h  stellated_dodecahedron.h  stellated_dodecahedron.tpp  stellated_icosahedron.h  stellated_icosahedron.tpp  stellated_icosahedron_generate
src/irl_gvm/: CMakeLists.txt  irl_gvm_distribution.cpp  irl_gvm_distribution.h  irl_gvm_intersection.cpp  irl_gvm_intersection.h  stellated_dodecahedron.h  stellated_dodecahedron.tpp  stellated_dodecahedron_generate  stellated_icosahedron.h  stellated_icosahedron.tpp
src/r3d/: CMakeLists.txt  r3d_intersection.c  r3d_intersection.h
src/timing_comp/: CMakeLists.txt  distribution_timing.cpp  distribution_timing.h  files.h  intersection_timing.cpp  intersection_timing.h  times.h  timing_comp.cpp  timing_comp.h
src/voftools/: CMakeLists.txt  voftools_intersection.f90  voftools_intersection.h  voftools_wrapper.f90
